bitcoin/BRWalletManager.h

typedef struct BRWalletManagerStruct *BRWalletManager;
typedef void *BRWalletManagerClientContext;
/// MARK: - Callbacks

typedef void
(*BRGetBlockNumberCallback) (BRWalletManagerClientContext context,
                             BRWalletManager manager,
                             int rid);
typedef void
(*BRGetTransactionsCallback) (BRWalletManagerClientContext context,
                              BRWalletManager manager,
                              const char **addresses,
                              size_t addressCount,
                              uint64_t begBlockNumber,
                              uint64_t endBlockNumber,
                              int rid);
typedef void
(*BRSubmitTransactionCallback) (BRWalletManagerClientContext context,
                                BRWalletManager manager,
                                BRWallet *wallet,
                                OwnershipGiven BRTransaction *transaction,
                                int rid);
typedef void
(*BRTransactionEventCallback) (BRWalletManagerClientContext context,
                               BRWalletManager manager,
                               BRWallet *wallet,
                               BRTransaction *transaction,
                               BRTransactionEvent event);
typedef void
(*BRWalletEventCallback) (BRWalletManagerClientContext context,
                          BRWalletManager manager,
                          BRWallet *wallet,
                          BRWalletEvent event);
typedef void
(*BRWalletManagerEventCallback) (BRWalletManagerClientContext context,
                                 BRWalletManager manager,
                                 BRWalletManagerEvent event);
typedef struct {
    BRWalletManagerClientContext context;

    BRGetBlockNumberCallback  funcGetBlockNumber;
    BRGetTransactionsCallback funcGetTransactions;
    BRSubmitTransactionCallback funcSubmitTransaction;

    BRTransactionEventCallback funcTransactionEvent;
    BRWalletEventCallback  funcWalletEvent;
    BRWalletManagerEventCallback funcWalletManagerEvent;
} BRWalletManagerClient;