Java/Crypto/src/main/java/com/breadwallet/crypto/libcrypto/CryptoLibrary.java

package com.breadwallet.crypto.libcrypto;

import com.breadwallet.crypto.libcrypto.bitcoin.BRChainParams;
import com.breadwallet.crypto.libcrypto.bitcoin.BRPeerManager;
import com.breadwallet.crypto.libcrypto.bitcoin.BRPeerManager.BRPeerManagerPublishTxCallback;
import com.breadwallet.crypto.libcrypto.crypto.BRCryptoAccount;
import com.breadwallet.crypto.libcrypto.bitcoin.BRWallet;
import com.breadwallet.crypto.libcrypto.bitcoin.BRWalletManager;
import com.breadwallet.crypto.libcrypto.bitcoin.BRWalletManagerClient;
import com.breadwallet.crypto.libcrypto.crypto.BRCryptoAddress;
import com.breadwallet.crypto.libcrypto.crypto.BRCryptoAmount;
import com.breadwallet.crypto.libcrypto.crypto.BRCryptoCurrency;
import com.breadwallet.crypto.libcrypto.crypto.BRCryptoUnit;
import com.breadwallet.crypto.libcrypto.support.BRAddress;
import com.breadwallet.crypto.libcrypto.bitcoin.BRTransaction;
import com.breadwallet.crypto.libcrypto.ethereum.BREthereumAddress;
import com.breadwallet.crypto.libcrypto.support.BRMasterPubKey;
import com.breadwallet.crypto.libcrypto.support.UInt256;
import com.breadwallet.crypto.libcrypto.support.UInt512;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.IntByReference;

public interface CryptoLibrary extends Library {

    String JNA_LIBRARY_NAME = "crypto";

    NativeLibrary LIBRARY = NativeLibrary.getInstance(CryptoLibrary.JNA_LIBRARY_NAME);

    CryptoLibrary INSTANCE = Native.load(CryptoLibrary.JNA_LIBRARY_NAME, CryptoLibrary.class);

    /**
     * Original signature : <code>UInt512 cryptoAccountDeriveSeed(const char*)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:2</i>
     */
    UInt512.ByValue cryptoAccountDeriveSeed(String phrase);
    /**
     * Original signature : <code>BRCryptoAccount cryptoAccountCreate(const char*)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:4</i>
     */
    BRCryptoAccount cryptoAccountCreate(String paperKey);
    /**
     * Original signature : <code>BRCryptoAccount cryptoAccountCreateFromSeed(UInt512)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:6</i>
     */
    BRCryptoAccount cryptoAccountCreateFromSeed(UInt512.ByValue seed);
    /**
     * Original signature : <code>BRCryptoAccount cryptoAccountCreateFromSeedBytes(const uint8_t*)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:8</i>
     */
    BRCryptoAccount cryptoAccountCreateFromSeedBytes(byte[] bytes);
    /**
     * Original signature : <code>uint64_t cryptoAccountGetTimestamp(BRCryptoAccount)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:10</i>
     */
    long cryptoAccountGetTimestamp(BRCryptoAccount account);
    /**
     * Original signature : <code>void cryptoAccountSetTimestamp(BRCryptoAccount, uint64_t)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:12</i>
     */
    void cryptoAccountSetTimestamp(BRCryptoAccount account, long timestamp);
    /**
     * Original signature : <code>BRCryptoAccount cryptoAccountTake(BRCryptoAccount)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:14</i>
     */
    BRCryptoAccount cryptoAccountTake(BRCryptoAccount obj);
    /**
     * Original signature : <code>void cryptoAccountGive(BRCryptoAccount)</code><br>
     * <i>native declaration : crypto/BRCryptoAccount.h:16</i>
     */
    void cryptoAccountGive(BRCryptoAccount obj);


    /**
     * Original signature : <code>char* cryptoCurrencyGetName(BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:2</i>
     */
    String cryptoCurrencyGetName(BRCryptoCurrency currency);
    /**
     * Original signature : <code>char* cryptoCurrencyGetCode(BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:4</i>
     */
    String cryptoCurrencyGetCode(BRCryptoCurrency currency);
    /**
     * Original signature : <code>char* cryptoCurrencyGetType(BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:6</i>
     */
    String cryptoCurrencyGetType(BRCryptoCurrency currency);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoCurrencyIsIdentical(BRCryptoCurrency, BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:8</i>
     */
    int cryptoCurrencyIsIdentical(BRCryptoCurrency c1, BRCryptoCurrency c2);
    /**
     * Original signature : <code>BRCryptoCurrency cryptoCurrencyTake(BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:10</i>
     */
    BRCryptoCurrency cryptoCurrencyTake(BRCryptoCurrency obj);
    /**
     * Original signature : <code>void cryptoCurrencyGive(BRCryptoCurrency)</code><br>
     * <i>native declaration : crypto/BRCryptoCurrency.h:12</i>
     */
    void cryptoCurrencyGive(BRCryptoCurrency obj);


    /**
     * Original signature : <code>char* cryptoUnitGetName(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:2</i>
     */
    String cryptoUnitGetName(BRCryptoUnit unit);
    /**
     * Original signature : <code>char* cryptoUnitGetSymbol(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:4</i>
     */
    String cryptoUnitGetSymbol(BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoCurrency cryptoUnitGetCurrency(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:6</i>
     */
    BRCryptoCurrency cryptoUnitGetCurrency(BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoUnit cryptoUnitGetBaseUnit(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:8</i>
     */
    BRCryptoUnit cryptoUnitGetBaseUnit(BRCryptoUnit unit);
    /**
     * Original signature : <code>uint8_t cryptoUnitGetBaseDecimalOffset(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:10</i>
     */
    byte cryptoUnitGetBaseDecimalOffset(BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoUnitIsCompatible(BRCryptoUnit, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:12</i>
     */
    int cryptoUnitIsCompatible(BRCryptoUnit u1, BRCryptoUnit u2);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoUnitIsIdentical(BRCryptoUnit, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:14</i>
     */
    int cryptoUnitIsIdentical(BRCryptoUnit u1, BRCryptoUnit u2);
    /**
     * Original signature : <code>BRCryptoUnit cryptoUnitTake(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:16</i>
     */
    BRCryptoUnit cryptoUnitTake(BRCryptoUnit obj);
    /**
     * Original signature : <code>void cryptoUnitGive(BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoUnit.h:18</i>
     */
    void cryptoUnitGive(BRCryptoUnit obj);


    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateDouble(double, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:7</i>
     */
    BRCryptoAmount cryptoAmountCreateDouble(double value, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateInteger(int64_t, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:9</i>
     */
    BRCryptoAmount cryptoAmountCreateInteger(long value, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountCreateString(const char*, BRCryptoBoolean, BRCryptoUnit)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:11</i>
     */
    BRCryptoAmount cryptoAmountCreateString(String value, int isNegative, BRCryptoUnit unit);
    /**
     * Original signature : <code>BRCryptoCurrency cryptoAmountGetCurrency(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:13</i>
     */
    BRCryptoCurrency cryptoAmountGetCurrency(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAmountIsNegative(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:15</i>
     */
    int cryptoAmountIsNegative(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAmountIsCompatible(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:17</i>
     */
    int cryptoAmountIsCompatible(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoComparison cryptoAmountCompare(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:19</i>
     */
    int cryptoAmountCompare(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountAdd(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:21</i>
     */
    BRCryptoAmount cryptoAmountAdd(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountSub(BRCryptoAmount, BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:23</i>
     */
    BRCryptoAmount cryptoAmountSub(BRCryptoAmount a1, BRCryptoAmount a2);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountNegate(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:25</i>
     */
    BRCryptoAmount cryptoAmountNegate(BRCryptoAmount amount);
    /**
     * Original signature : <code>double cryptoAmountGetDouble(BRCryptoAmount, BRCryptoUnit, BRCryptoBoolean*)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:27</i>
     */
    double cryptoAmountGetDouble(BRCryptoAmount amount, BRCryptoUnit unit, IntByReference overflow);
    /**
     * Original signature : <code>uint64_t cryptoAmountGetIntegerRaw(BRCryptoAmount, BRCryptoBoolean*)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:29</i>
     */
    long cryptoAmountGetIntegerRaw(BRCryptoAmount amount, IntByReference overflow);
    /**
     * Original signature : <code>UInt256 cryptoAmountGetValue(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:31</i>
     */
    UInt256.ByValue cryptoAmountGetValue(BRCryptoAmount amount);
    /**
     * Original signature : <code>BRCryptoAmount cryptoAmountTake(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:33</i>
     */
    BRCryptoAmount cryptoAmountTake(BRCryptoAmount obj);
    /**
     * Original signature : <code>void cryptoAmountGive(BRCryptoAmount)</code><br>
     * <i>native declaration : crypto/BRCryptoAmount.h:35</i>
     */
    void cryptoAmountGive(BRCryptoAmount obj);


    /**
     * Original signature : <code>char* cryptoAddressAsString(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:2</i>
     */
    Pointer cryptoAddressAsString(BRCryptoAddress address);
    /**
     * Original signature : <code>BRCryptoBoolean cryptoAddressIsIdentical(BRCryptoAddress, BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:4</i>
     */
    int cryptoAddressIsIdentical(BRCryptoAddress a1, BRCryptoAddress a2);
    /**
     * Original signature : <code>BRCryptoAddress cryptoAddressTake(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:6</i>
     */
    BRCryptoAddress cryptoAddressTake(BRCryptoAddress obj);
    /**
     * Original signature : <code>void cryptoAddressGive(BRCryptoAddress)</code><br>
     * <i>native declaration : crypto/BRCryptoAddress.h:8</i>
     */
    void cryptoAddressGive(BRCryptoAddress obj);


    /**
     * Original signature : <code>BRMasterPubKey cryptoAccountAsBTC(BRCryptoAccount)</code><br>
     * <i>native declaration : crypto/BRCryptoPrivate.h:23</i>
     */
    BRMasterPubKey.ByValue cryptoAccountAsBTC(BRCryptoAccount account);

